# pyupnp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
k8s/: backend-deployment.yml  frontend.yml  media-disk-pv.yml  media-disk-pvc.yml
pyupnp_server/: asgi.py  settings.py  urls.py  views.py  wsgi.py
pyupnp_server/templates/: base.html  index.html
pyupnp_server/templates/registration/: login.html
pyupnp_services/: __init__.py  admin.py  apps.py  middlewares.py  models.py  services.py  signals.py  views.py
pyupnp_services/templates/: action.xml  action_response.xml  action_response_items.xml  device_detail.xml  service_detail.xml
